--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GSWatcher",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
