--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.16",
@@ -16,6 +18,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-echarts": "^6.0.0-rc.3",
